Removed array of authorities constructor from TestingAuthenticationToken and RunAsUserToken.